<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculo">

    <TableLayout
        android:id="@+id/mainTable"
        android:layout_width="411dp"
        android:layout_height="513dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943"
        tools:layout_editor_absoluteX="0dp">

        <TableRow
            android:id="@+id/enc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/enc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:text="@string/nombreT"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/enc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="73dp"
                android:text="@string/cargo"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/enc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="47dp"
                android:text="@string/isss"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/enc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="47dp"
                android:text="@string/afp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/enc5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="47dp"
                android:text="@string/renta"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/enc6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="47dp"
                android:text="@string/extras"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/enc7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/total"
                android:textAlignment="center"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/calcMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datos_de_empleados"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/mainTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />
</androidx.constraintlayout.widget.ConstraintLayout>